# pong-wars

./: .hindent.yaml  LICENSE  README.md  SCRATCH.md  Sound-Effects.txt  pong-wars.cabal  pong-wars.nix  release.nix  stack.yaml
resources/audio/purple-planet/: README.txt
src/: Main.hs
src/PongWars/: Collision.hs
tests/: TestSuite.hs
tests/PongWars/Collision/: Tests.hs
