name:                pong-wars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elben/pong-wars#readme
license:             BSD3
license-file:        LICENSE
author:              Elben Shira
maintainer:          elbenshira@gmail.com
copyright:           2017 Elben Shira
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          resources/images/*.png, resources/images/*.bmp

executable pong-wars
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults
