name:                pong-wars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elben/pong-wars#readme
license:             BSD3
license-file:        LICENSE
author:              Elben Shira
maintainer:          elbenshira@gmail.com
copyright:           2017 Elben Shira
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          resources/images/*.png, resources/images/*.bmp

executable pong-wars
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       PongWars.Collision
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , sdl2-image >= 2.0
                     -- , sdl2-ttf
                     -- Test deps below are listed here just for development, so
                     -- that ghc-mod picks it up.
                     , HUnit
                     , QuickCheck >= 2.0
                     , test-framework >= 0.8 && < 0.9
                     , test-framework-hunit >= 0.3.0
                     , test-framework-quickcheck2 >= 0.3.0
  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults

test-suite pong-wars-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0

  hs-source-dirs:   src src/PongWars tests
  main-is:          TestSuite.hs
  other-modules:    PongWars.Collision

  build-depends:    base >= 4.7 && < 5
                  , HUnit
                  , test-framework
                  , test-framework-hunit
  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults


